/* Translations */ Scottish Gaelic <coat#1908208>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -25,6 +25,7 @@
 *Italian: [[mantello]] ''m''
 {{mid}}
 *Portuguese: [[casaco]] ''m''
+*Scottish Gaelic: [[còta]] {{m}}
 *Slovene: [[plašč]] ''m''
 *Spanish: [[abrigo]] ''m'', [[saco]] ''m'', [[casaca]] ''f''
 *Swedish: [[rock#Swedish|rock]] ''c''
