robot  Adding: [[hy:choose]], [[kk:choose]] <choose#1912283>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -89,8 +89,10 @@ From Old English [[ceosan|ċēosan]].
 [[fr:choose]]
 [[gl:choose]]
 [[ko:choose]]
+[[hy:choose]]
 [[io:choose]]
 [[it:choose]]
+[[kk:choose]]
 [[hu:choose]]
 [[ja:choose]]
 [[fi:choose]]
