--- a/en/b/blonde.6881.wikitext
+++ b/en/b/blonde.6881.wikitext
@@ -61,7 +61,7 @@ flexed form of [[blond]]
 '''blonde''' {{m}}/{{f}}
 # Person with blonde hair; blonde
 '''blonde''' {{f}}
-# {{Canadian French}}, {{frslang}} [[girlfriend]]
+# {{context|Canadian French|slang|lang=fr}} [[girlfriend]]
 
 ----
 
