robot  Adding: [[io:hamstring]] <hamstring#1919644>

--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -20,6 +20,7 @@
 
 #The act of buying large supplies of something which is belived to become more expensive or more difficult to get at in the near future.
 
+[[io:hamstring]]
 [[ru:hamstring]]
 [[vi:hamstring]]
 [[zh:hamstring]]
