--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -107,6 +107,7 @@ Old English ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]'
 *[[cockfight]]
 *[[dogfight]]
 {{mid2}}
+*[[fighter]]
 *[[fighting cock]]
 {{bottom2}}
 
