robot  Adding: [[tr:icon]] <icon#1921033>

--- a/en/i/icon.6837.wikitext
+++ b/en/i/icon.6837.wikitext
@@ -114,4 +114,5 @@ From {{Gr.}} [[εἰκών]] (''eikon'') "likeness, image, figure, representatio
 [[fi:icon]]
 [[ta:icon]]
 [[vi:icon]]
+[[tr:icon]]
 [[zh:icon]]
