--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -12,6 +12,10 @@
 
 # {{past of|[[spell]]}}
 
+====Quotations====
+*'''1590''' — [[w:William Shakespeare|William Shakespeare]], ''[[s:Love's Labour's Lost|Love's Labour's Lost]], v 1''
+*:Yes, yes; he teaches boys the hornbook. What is a, b, '''spelt'''<br/>backward with the horn on his head?
+
 ===Noun===
 '''spelt'''
 
