--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -52,7 +52,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Finnish: [[tulla]]
 *French: [[venir]]
 *German: [[kommen]]
-*Greek: [[έρχομαι]] (érkhomai)
+*Greek: [[έρχομαι]] (érkhomai), [[έλα]] (ela)
 *Hebrew: [[לבוא]] (le-vó)
 *Hindi: [[आना]] (ānā)
 *Hungarian: [[jön]]
