--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -46,6 +46,7 @@ See [[WikiSaurus:vomit]].
 {{top}}
 *Bosnian: Dusmabagey
 *Dutch: [[braaksel]], ''(colloquial)'' [[kots]]
+*Estonian: [[okse]]
 *Finnish: [[oksennus]]
 {{mid}}
 * Russian: [[блевотина]] {{f}}, [[рвота]] {{f}}
