--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -10,6 +10,7 @@ Old English ''[[sūcan]]''
 {{en-verb}}
 
 # To use the [[mouth]] to pull in [[liquid]] substances for ingestion or to perform a similar act on solid material without [[ingestion]].
+# To draw into, by any means, with an atractive force, usually without direct contact
 # (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.
 # (''colloquial'') With ''at'', indicates a particular area of deficiency.
 #: ''You're great at baseball, but you suck at golf.''
