--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -34,7 +34,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 '''encounter'''
 {{top}}
 *Danish: [[finde]], [[træffe]]
-*Dutch: [[vinden]]
+*Dutch: [[vinden]], [[aantreffen]]
 *[[Esperanto]]: [[trovi]]
 *Finnish: [[löytää]]
 *German: [[finden]]
