robot  Adding: [[tr:substance]] <substance#1939119>

--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -134,4 +134,5 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 [[fi:substance]]
 [[ta:substance]]
 [[vi:substance]]
+[[tr:substance]]
 [[zh:substance]]
