--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -32,6 +32,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *Portuguese: [[substância]] {{f}}
 *Swedish: [[ämne]] {{n}}, [[substans]] {{c}}
 *Telugu: [[పదార్థము]] (padaarthamu)
+*Turkish: [[madde]]
 {{bottom}}
 
 ;essential part
