--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -69,7 +69,7 @@ Old English ''[[crēopan]]''
 *Italian: [[strisciare]]
 *Japanese: [[這う]] (hau)
 *Russian: [[ползти]]
-*Spanish: [[arrastrarse]]
+*Spanish: [[arrastrarse]], [[reptar]]
 {{bottom}}
 
 '''grow across a surface rather than upwards'''
