--- a/en/m/mandat.1837.wikitext
+++ b/en/m/mandat.1837.wikitext
@@ -35,4 +35,5 @@ From Latin [[mandatum]] or [[mandatus]], from [[mandare]] "to put in one's hands
 [[id:mandat]]
 [[ru:mandat]]
 [[fi:mandat]]
+[[tt:mandat]]
 [[vi:mandat]]
