--- a/en/b/bone marrow.7397.wikitext
+++ b/en/b/bone marrow.7397.wikitext
@@ -1,19 +1,22 @@
 ==English==
 
 ===Noun===
-'''[[bone]] [[marrow]]'''
-# the [[fatty]] [[vascular]] [[tissue]] that fills the [[cavities]] of bones; the place where new [[blood]] [[cell]]s are produced
+{{en-noun|sg=[[bone]] [[marrow]]|-}}
+# {{anatomy}} The [[fatty]] [[vascular]] [[tissue]] that fills the [[cavities]] of bones; the place where new [[blood]] [[cell]]s are produced.
 
 ===Translations===
+{{trans-top|bone marrow}}
 *Dutch: [[beenmerg]] {{n}}
 *[[Esperanto]]: [[osta medolo]]
 *Finnish: [[luuydin]]
 *French : [[moelle osseuse]] {{f}}
 *Indonesian : [[sumsum tulang]]
 *Japanese : [[骨髄]] ([[こつずい]], kotsuzui)
+{{trans-mid}}
 *Latin: [[medulla ossium]]
 *Polish: [[szpik kostny]] {{m}}
 *Spanish: [[meollo]], [[tuétano]], [[médula]]
 *Swedish: [[benmärg]] {{c}}
+{{trans-bottom}}
 
 [[ar:bone marrow]]
