--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -8,7 +8,7 @@
 *:Rhymes: [[Rhymes:English:-ʌtə(r)|-ʌtə(r)]]
 
 ===Etymology===
-Old English ''[[butere]]'', ultimately from Latin ''[[butyrum]]''
+From a W.Germanic source (cf. Ger. Butter, Du. boter) < Latin ''[[butyrum]]'' < Greek [[βούτυρον]] boutyron, perhaps lit. "cow-cheese," from [[βούς]] bous "ox, cow" + [[τύρος]] tyros "cheese;"
 
 ===Noun===
 {{wikipedia}}
