--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+====Etymology====
+Old English ''[[crēopan]]''
+
 ===Pronunciation===
 * {{AHD|/krēp/}}, {{IPA|/kriːp/}}, {{SAMPA|/kri:p/}}
 *Rhymes: [[Rhymes:English:-iːp|-iːp]]
@@ -9,11 +12,11 @@
 
 # The movement of something that creeps.
 # A gradual change in anything.
-## (''publishing'') In sewn books, the tendancy of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
-## (''materials science'') An increase in [[strain]] with time.
-##{{geology}} the [[imperceptible]] [[downslope]] movement of surface [[rock]]
-# (''informal'') An annoyingly [[unpleasant]] person.
-#: ''Stop following me, you creep!''
+# {{cattag|publishing}} In sewn books, the tendancy of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
+# {{cattag|materials science}} An increase in [[strain]] with time.
+# {{geology}} the [[imperceptible]] [[downslope]] movement of surface [[rock]]
+# {{cattag|informal|pejorative}} An annoyingly [[unpleasant]] person.
+#: ''Stop following me, you '''creep'''!''
 
 ====Translations====
 '''movement of something that creeps'''
@@ -23,11 +26,11 @@
 *Italian: [[strisciare]] {{m}}
 {{bottom}}
 
-<!--'''gradual change in anything'''
+'''gradual change in anything'''
 {{top}}
 {{mid}}
 {{bottom}}
--->
+
 '''informal: an annoyingly unpleasant person'''
 {{top}}
 *Dutch: [[griezel]] {{m}}, [[engerd]] {{m}}
@@ -39,16 +42,13 @@
 ===Verb===
 {{en-verb|creeps|creeping|crept}}
 
-# ''(transitive):'' To move slowly with the [[abdomen]] close to the ground.
+# {{transitive}} To move slowly with the [[abdomen]] close to the ground.
 #: ''Lizards and snakes '''crept''' over the ground.''
-# ''(transitive):'' Of [[plant]]s, to grow across a surface rather than upwards.
-# ''(transitive):'' To move slowly and quietly in a particular direction.
+# {{transitive}} Of [[plant]]s, to grow across a surface rather than upwards.
+# {{transitive}} To move slowly and quietly in a particular direction.
 #: ''He tried to '''creep''' past the guard without being seen.''
-# ''(transitive):'' To change gradually in a particular direction.
+# {{transitive}} To change gradually in a particular direction.
 #: ''Prices have been '''creeping''' up all year.''
-
-====Etymology====
-Old English ''[[crēopan]]''
 
 ====Synonyms====
 *(''move slowly with the abdomen close to the ground''): [[crawl]]
@@ -100,9 +100,7 @@ Old English ''[[crēopan]]''
 {{bottom}}
 
 =====Translations to be checked=====
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
-
 *{{ttbc|Frisian}}: [[krûpe]]
 
 ===Derived terms===
