--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -25,6 +25,7 @@ Old English ''[[sūcan]]''
 '''To use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion'''
 {{top}}
 *Arabic: [[مص]]
+*Armenian: ծծել
 *Bulgarian: [[смуча]]
 *Finnish: [[imeä]]
 *French:  [[sucer]]
