/* Translations */ +el <port#1949315>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -139,6 +139,7 @@ From Latin [[porta]] ‘passage, gate’, reinforced in Middle English from Old 
 '''computing: logical or physical construct in and from which data are transferred'''
 {{top}}
 *Finnish: [[portti]]
+*Greek: [[θύρα]] {{f}}, [[σύνδεση]] {{f}}
 {{mid}}
 *Swedish: [[port#Swedish|port]] {{c}}
 {{bottom}}
