{{gender}}, [[User:Connel MacKenzie/Format|fmt]], reordered POS headings, +ex, cleanup <float#1949420>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -7,27 +7,100 @@
 ===Etymology===
 From {{OE.}} [[flotian]].
 
+===Noun===
+{{en-noun}}
+
+# A [[buoyant]] device used to support something in water or another liquid.
+#:''Attach the '''float''' and the weight to the fishing line, above the hook.''
+# A sort of [[trowel]] used for finishing [[concrete]] surfaces.
+#:''When pouring a new driveway, you can use a two-by-four as a '''float'''.''
+# An elaborately decorated trailer or vehicle, intended for display in a [[parade]] or [[pageant]].
+#:''That '''float''' covered in roses is very pretty.''
+# {{finance}} Funds committed to be paid but not yet paid.
+#:''Our bank does a nightly sweep of accounts, to adjust the '''float''' so we stay within our reserves limit.''
+# {{cattag|finance|AU|and other Commonwealth countries?}} An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally followed by a listing on a [[stock exchange]].
+#:'''2006''', ''You don't actually need a broker to buy shares in a '''float''' when a company is about to be listed on the Australian Stock Exchange.'' &mdash; [[w:Australian Securities and Investments Commission|Australian Securities and Investments Commission]] financial tips article, ''Buying shares in a float'' [http://www.fido.asic.gov.au/fido/fido.nsf/print/Buying+shares+in+a+float?opendocument]
+# {{banking}} The total amount of checks/cheques or other drafts written against a bank account but not yet cleared and charged against the account.
+#:''No sir, your current '''float''' is not taken into account, when assets are legally garnished.''
+# {{insurance}} Premiums taken in but not yet paid out.
+#:''We make a lot of interest from our nightly '''float'''.''
+# {{programming}} Short form of [[floating-point number]].
+#:''That routine should not have used an int, it should be a '''float'''.''
+# A [[soft]] beverage with a [[scoop]] of vanilla [[ice-cream]] floating in it.
+#:''It's true - I don't consider anything other than root-beer with vanilla ice-cream to be a "real" '''float'''.''
+
+====Translations====
+'''buoyant device used to support something in liquid'''
+{{top}}
+*Dutch: [[vlot]] {{n}}
+*Finnish: [[koho]]
+{{mid}}
+*Japanese: [[浮き]] (uki), [[浮揚物]] (fuyoubutsu)
+*Russian: [[плот]] {{m}}
+{{bottom}}
+
+'''sort of trowel'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''trailer in parade'''
+{{top}}
+{{mid}}
+*Russian: [[платформа]] {{f}}
+{{bottom}}
+
+'''funds committed to be paid but not yet paid'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''banking: total amount of checks/cheques or other drafts written against a bank'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''insurance: premiums taken in but not yet paid out'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+'''programming: short form of floating-point number'''
+{{top}}
+*Dutch: [[vlottende kommagetal]] {{n}}
+*Finnish: [[liukuluku]]
+{{mid}}
+{{bottom}}
+
+'''soft beverage with a scoop of vanilla ice-cream floating in it'''
+{{top}}
+{{mid}}
+{{bottom}}
+
+====Synonyms====
+Shares offered to the public:
+* [[initial public offering]]
+
 ===Intransitive verb===
 {{en-verb}}
 
-#Of an object or substance, to be supported by a liquid of greater density than the object so as that part of the object or substance remains above the surface.
-#:''The boat floated on the water.''
-#:''The oil floated on the vinegar.''
-#To be capable of floating.
-#:''That boat doesn't float.''
-#:''Oil floats on vinegar.''
-#To drift gently through the air.
-#:''The balloon floated off into the distance.''
-#To move in a particular direction with the liquid in which one is floating
-#:''I'd love to just float downstream.''
-#To move in a fluid manner.
-#:''The dancer floated gracefully around the stage.''
-#To automatically adjust a parameter as related parameters change.
+# Of an object or substance, to be supported by a liquid of greater density than the object so as that part of the object or substance remains above the surface.
+#:''The boat '''floated''' on the water.''
+#:''The oil '''floated''' on the vinegar.''
+# To be capable of floating.
+#:''That boat doesn't '''float'''.''
+#:''Oil '''floats''' on vinegar.''
+# To drift gently through the air.
+#:''The balloon '''floated''' off into the distance.''
+# To move in a particular direction with the liquid in which one is floating
+#:''I'd love to just '''float''' downstream.''
+# To move in a fluid manner.
+#:''The dancer '''floated''' gracefully around the stage.''
+# To automatically adjust a parameter as related parameters change.
 #(''[[finance]]'') To allow a price to be determined by the markets as opposed to by rule.
-#:''The yen floats against the dollar.''
+#:''The yen '''floats''' against the dollar.''
 
 ====Translations====
-
 '''be supported by a liquid'''
 {{top}}
 *Dutch: [[drijven]]
@@ -91,15 +164,14 @@ From {{OE.}} [[flotian]].
 ===Transitive verb===
 {{en-verb}}
 
-#To propose (an idea) for consideration.
-#:''I floated the idea of free ice-cream on Fridays, but no one was interested.''
-#To extend a short-term loan to.
-#:''Could you float me $50 until payday?''
-# {{finance}} {{AU}} (''and other Commonwealth countries?'') To issue or sell [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, followed by [[listing]] on a [[stock exchange]].
-#: 2005: ''He floated the company on the Milan Stock Exchange last December and sold 29 per cent of its shares, mostly to American investors.'' &mdash; article by Dewi Cooke, ''[[w:The Age|The Age]]'' newspaper, 21 June 2005 (about Mario Moretti Polegato) [http://www.theage.com.au/news/business/shoemaker-strides-for-world-domination/2005/06/20/1119250927926.html?from=moreStories]
+# To propose (an idea) for consideration.
+#:''I '''floated''' the idea of free ice-cream on Fridays, but no one was interested.''
+# To extend a short-term loan to.
+#:''Could you '''float''' me $50 until payday?''
+# {{cattag|finance|AU|and other Commonwealth countries?}} To issue or sell [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, followed by [[listing]] on a [[stock exchange]].
+#:'''2005''', ''He '''floated''' the company on the Milan Stock Exchange last December and sold 29 per cent of its shares, mostly to American investors.'' &mdash; article by Dewi Cooke, ''[[w:The Age|The Age]]'' newspaper, 21 June 2005 (about Mario Moretti Polegato) [http://www.theage.com.au/news/business/shoemaker-strides-for-world-domination/2005/06/20/1119250927926.html?from=moreStories]
 
 ====Translations====
-
 '''propose for consideration'''
 {{top}}
 *Dutch: [[te water laten]], [[voorstellen]]
@@ -114,79 +186,10 @@ From {{OE.}} [[flotian]].
 {{bottom}}
 
 =====Translations to be checked=====
-<!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
-
 *{{ttbc|German}}: [[schwimmen]], [[schweben]]
 *{{ttbc|Ido}}: [[flotacar]]
 *{{ttbc|Spanish}}: [[flotar]]
-
-===Noun===
-'''float''' (''plural'' '''floats''')
-
-#A [[buoyant]] device used to support something in water or another liquid.
-#A sort of [[trowel]] used for finishing [[concrete]] surfaces.
-#An elaborately decorated trailer or vehicle, intended for display in a [[parade]] or [[pageant]].
-#(''finance'') Funds committed to be paid but not yet paid.
-# {{finance}} {{AU}} (''and other Commonwealth countries?'') An offering of [[share]]s in a [[company]] (or [[unit]]s in a [[trust]]) to members of the public, normally follwed by a listing on a [[stock exchange]].
-#: 2006: ''You don't actually need a broker to buy shares in a float when a company is about to be listed on the Australian Stock Exchange.'' &mdash; [[w:Australian Securities and Investments Commission|Australian Securities and Investments Commission]] financial tips article, ''Buying shares in a float'' [http://www.fido.asic.gov.au/fido/fido.nsf/print/Buying+shares+in+a+float?opendocument]
-#(''banking'') The total amount of checks/cheques or other drafts written against a bank account but not yet cleared and charged against the account.
-#(''insurance'') Premiums taken in but not yet paid out.
-#(''programming'') Short form of [[floating-point number]].
-#A [[soft]] beverage with a [[scoop]] of vanilla [[ice-cream]] floating in it.
-
-====Translations====
-
-'''buoyant device used to support something in liquid'''
-{{top}}
-*Dutch: [[vlot]] ''n''
-*Finnish: [[koho]]
-{{mid}}
-*Japanese: [[浮き]] (uki), [[浮揚物]] (fuyoubutsu)
-*Russian: [[плот]] ''m''
-{{bottom}}
-
-'''sort of trowel'''
-{{top}}
-{{mid}}
-{{bottom}}
-
-'''trailer in parade'''
-{{top}}
-{{mid}}
-*Russian: [[платформа]] ''f''
-{{bottom}}
-
-'''funds committed to be paid but not yet paid'''
-{{top}}
-{{mid}}
-{{bottom}}
-
-'''banking: total amount of checks/cheques or other drafts written against a bank'''
-{{top}}
-{{mid}}
-{{bottom}}
-
-'''insurance: premiums taken in but not yet paid out'''
-{{top}}
-{{mid}}
-{{bottom}}
-
-'''programming: short form of floating-point number'''
-{{top}}
-*Dutch: [[vlottende kommagetal]] ''n''
-*Finnish: [[liukuluku]]
-{{mid}}
-{{bottom}}
-
-'''soft beverage with a scoop of vanilla ice-cream floating in it'''
-{{top}}
-{{mid}}
-{{bottom}}
-
-====Synonyms====
-Shares offered to the public:
-* [[initial public offering]]
 
 [[Category:Liquids]]
 
