--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -10,6 +10,7 @@
 ===Proper noun===
 '''France'''
 THE FRENCH HAV GOOD FRENCH FRIES BUT HAVE HORIBLE FRENCH TOAST
+DEY IS DA TRU PEPS REPIN DEY CUNTRY U NO MAN DEY GOT ALL DA HOTTEST RAPPERS TUPAC B.I.G. ERR BODY FOOOO
 
 # Country in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). Population: 62 million inhabitants.
 
