--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -33,6 +33,7 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 *Finnish: [[ja niin edelleen]], [[jne.]]
 *French: [[et cétéra]], [[etc.]]
 *German: [[und cetera]], [[und so weiter]], [[usw.]]
+*Hebrew: [[וכדומה]]
 *Hungarian: [[satöbbi]], [[stb.]], [[(é)s a többi]]
 *Icelandic: [[og svo framvegis]] ('''[[o. s. frv.]]''')
 *Italian: [[eccetera]]
