--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -72,6 +72,7 @@
 *[[Malagasy]]: [[Frantsa]]
 *Malay: [[Perancis]]
 *[[Maldivian]]: [[Faranseysi Vilath]]
+*Maltese: Franza
 *Mongolian: [[Франц улс]] (Frants uls)
 *[[Nauruan]]: France
 *Norwegian: [[Frankrike]] (Franske Republikk, Republikken Frankrike)
