/* Pronunciation */ + IPA <count#1959151>

--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -1,8 +1,9 @@
 ==English==
 
 ===Pronunciation===
+*{{IPA|/kaʊnt/}}
 *{{audio|en-us-count.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-aʊnt|-aʊnt]]
+*{{Rhymes|aʊnt}}
 
 ===Noun===
 {{en-noun}}
