--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -1,4 +1,4 @@
-[[Image:Jan Vermeer van Delft 003.jpg|thumb|right|A girl surrounded by curtains.]]
+[[Image:Jan Vermeer van Delft 003.jpg|thumb|right|250 px|Girl surrounded by curtains.]]
 ==English==
 
 ===Pronunciation===
