robot  Adding: [[ar:curtain]], [[de:curtain]], [[simple:curtain]] <curtain#1977725>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -38,6 +38,8 @@
 
 [[Category:1000 English basic words]]
 
+[[ar:curtain]]
+[[de:curtain]]
 [[fa:curtain]]
 [[fr:curtain]]
 [[hy:curtain]]
@@ -45,6 +47,7 @@
 [[it:curtain]]
 [[hu:curtain]]
 [[ru:curtain]]
+[[simple:curtain]]
 [[sr:curtain]]
 [[fi:curtain]]
 [[ta:curtain]]
