--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -1,4 +1,5 @@
 ==Translingual==
+{{stroke order|strokes=7}}
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=4712<sub>0</sub>|canj=土心戈一 (GPIM), 土心一一 (GPMM)}}
 # [[equal]], [[even]], [[fair]]
