--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -136,6 +136,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[pl:find]]
 [[pt:find]]
 [[ru:find]]
+[[simple:find]]
 [[fi:find]]
 [[vi:find]]
 [[tr:find]]
