--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -15,11 +15,29 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=土04}}
-# {{defn|Japanese}} 
+{{ja-kanji|grade=5|rs=土04}}
+# [[gentle]]
+# [[equalize]]
+# [[equally]] 
 ====Readings====
-{{ja-readings|on=[[きん]] (kin), [[いん]] (in)|kun=[[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)}}
+{{ja-readings|on=[[きん]] (kin), [[いん]] (in), [[うん]] (un)|kun=[[ととのえる]] (totonoeru), [[ひとしい]] (hitoshii)|nadzuke=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひとし]] (hitoshi), [[ひら]] (hira), [[まさ]] (masa)}}
+====Compounds====
+{{top4}}
+*[[均一]]
+*[[均衡]]
+{{mid4}}
+*[[均輸法]]
+*[[均斉]]
+{{mid4}}
+*[[均沾]]
+*[[均田]]
+{{mid4}}
+*[[均等]]
+{{bottom}}
+====References====
+{{ja-kref|k=2249|s=8BCF|j=3651}}
 ----
+
 ==Korean==
 ===Hanja===
 {{ko-hanja|hangeul=균|rv=gyun|mr=kyun}}
