--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,7 +12,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 ===Adjective===
 {{en-adj}}
 
-#possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
+#Sarah Hussain; possessing great charm and very attractive; appealing, desirable; handsome; elegant; lovely; fair; charming; graceful; pretty; delightful; fine.
 #{{cattag|of the weather}} pleasant; clear.
 
 ====Translations====
