--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -66,7 +66,7 @@
 # To [[enter]] a [[queue]] in the wrong place.
 #:''One student kept trying to '''cut''' in front of the line.''
 # {{context|filmology}} To [[cease]] [[record]]ing activities.
-# To [[lower]] or [[reduce]] a [[cost]] or rate of [[pay]], ''especially'' intentionally.
+# To [[reduce]], ''especially'' intentionally.
 #:''They're going to '''cut''' salaries by fifteen percent.''
 # To [[form]] or [[shape]] by cutting.
 #:''I have three diamonds to '''cut''' today.''
