robot  Adding: [[fa:cut]] <cut#1994893>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -147,6 +147,7 @@ From Proto-North Sarawak *''likud'', from Proto-Malayo-Polynesian *''likuj''.
 
 [[ar:cut]]
 [[es:cut]]
+[[fa:cut]]
 [[fr:cut]]
 [[gl:cut]]
 [[ko:cut]]
