/* Translations */ added Latin <stomach#1996614>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -40,6 +40,7 @@
 *Japanese: [[胃]] ([[い]], i)
 *[[Kazakh]]: [[асқазан]] (asqazan)
 *Korean: [[위]] (wi)
+*Latin: [[stomachus]] {{m}}
 *Old English: [[maga#Old English|maga]] {{m}}
 *Polish: [[żołądek]] {{m}}
 *Portuguese: [[estômago]] {{m}}
