--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -16,10 +16,10 @@
 ==Japanese==
 
 ===Noun===
-[[Category:ja:1000_Japanese_basic_words|はる]]
+[[Category:1000_Japanese_basic_words|はる]]
 {{ja-noun|k|hira=はる|rom=haru}}
 
-# [[spring#Noun|spring]] (the season)
+#(''season'') [[spring#Noun|spring]] 
 [[Category:ja:Calendar terms|はる]]
 ===Kanji===
 {{ja-kanji|grade=|rs=日05}}
