--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -22,6 +22,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *Czech: [[látka]] {{f}}
 *Danish: [[substans]], [[masse]]
 *Dutch: [[substantie]] {{f}}
+*Finnish: [[aine]], [[materia]]
 *French: substance {{f}}
 *Greek: [[ουσία]] (usia) {{f}}
 *Latvian: [[viela]] {{f}}
@@ -37,6 +38,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 ;essential part
 {{top}}
 *Danish: [[substans]], [[hovedindhold]]
+*Finnish: [[ydin]], [[substanssi]]
 *French: substance {{f}}
 *Greek: [[ουσιώδης]] (usiodes) {{m}}
 {{mid}}
@@ -59,6 +61,7 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 ;considerable wealth
 {{top}}
 *Danish: [[formue]]
+*Finnish: [[vara|varat]]
 *Norwegian: [[formue]] {{m}}
 *Russian: [[вес]] (ves) {{m}}
 {{mid}}
@@ -67,10 +70,11 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 
 ;drugs
 {{top}}
-*Norwegian: [[narkotika]]
+*Finnish: [[aine|aineet]]
 *Greek: [[ναρκωτικά]] (narkotika) {{n}} {{p}}, [[ναρκωτικές ουσίες]] (narkotikes usies) {{f}} {{p}}
-*Russian: [[вещество]] (veščestvó) {{n}}
 {{mid}}
+*Norwegian: [[narkotika]]
+*Russian: [[вещество]] (veščestvó) {{n}}
 *Swedish: [[substans]] {{c}}
 {{bottom}}
 
@@ -85,7 +89,6 @@ From Latin ''[[substantia]]'', '''substance''' or '''essence''', noun form from 
 *{{ttbc|Dutch}}: [[substantie]]
 *{{ttbc|Esperanto}}: [[substanco]]
 *{{ttbc|Estonian}}: [[aine]]
-*{{ttbc|Finnish}}: [[aine]]
 *{{ttbc|German}}: [[Substanz]] {{f}}
 *{{ttbc|Hebrew}}: [[חומר]] (khómer) {{m}}
 *{{ttbc|Hungarian}}: [[tartalom]]
