robot  Adding: [[pl:fight]] <fight#2007298>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -201,6 +201,7 @@ Old English ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]'
 [[it:fight]]
 [[kk:fight]]
 [[hu:fight]]
+[[pl:fight]]
 [[ru:fight]]
 [[fi:fight]]
 [[sv:fight]]
