--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -82,7 +82,7 @@ Old English ''[[sūcan]]''
 [[it:suck]]
 [[hu:suck]]
 [[fi:suck]]
-[[ta:suck]]
+[[ta:suck]] YOU SUCK!
 [[vi:suck]]
 [[uk:suck]]
 [[zh:suck]]
