--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -72,6 +72,7 @@
 *Turkish: [[Almanya]]
 *Ukrainian: [[Німеччина]] (niméččyna) {{f}}
 *Vietnamese: [[nước Đức]]
+*Võro: [[S'aksamaa]]
 *Welsh: [[Yr Almaen]] {{f}}
 *Xhosa: [[iJamani]] ''(noun 5)''
 *Yiddish: [[Daytshland]] 
