/* Translations */ <Czech Republic#2014971>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -13,6 +13,7 @@
 *Croatian: [[Češka Republika]] {{f}}
 *Czech: [[Česká republika]] {{f}}
 *Dutch: [[Tsjechische Republiek]]
+*Estonian: [[Tšehhi]], [[Tšehhimaa]], [[Tšehhi Vabariik]]
 *Finnish: [[Tšekin tasavalta]]
 *French: la [[République tchèque]] {{f}}
 *German: [[Tschechische Republik]]
@@ -42,6 +43,7 @@
 *Spanish: la [[República Checa]] {{f}}
 *Turkish: [[Çek Cumhuriyeti]]
 *Ukrainian: [[Чеська Республіка]]
+*Võro: [[Tsehhi]], [[Tsehhi Vabariik']]
 *Yiddish: (Tshekhishe Republik)
 *Welsh: [[Y Weriniaeth Tsiec]]
 {{bottom}}
