--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -43,10 +43,10 @@
 *[[Interlingua]]: [[Statos Unite de America]]
 *[[Irish]]: [[Stáit Aontaithe Mheiriceá]], [[Meiriceá]]
 *Italian: [[Stati Uniti d'America]] {{mpl}}, (''short form'') [[Stati Uniti]] {{mpl}}, [[SUA]]
-{{mid}}
 *Japanese: [[米国]] (べいこく, Béikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, Ameriká Gasshūkoku)
 *Kazakh: [[Америка Құрама Штаттары]]
 *Khmer: {{KMchar|[[សហរដ្ឋអាេមរិក]]}} (saharodtthaqa amerika)
+{{mid}}
 *Kirghiz: [[Америка Кошмо Штаттары]] (Amerika Koşmo Ştattarı)
 *Korean: [[미국]]/[[美國]] (Miguk), [[아메리카 합중국]] (Amerika Hapjungguk)
 *Latin: [[Respublicae Unitae Americae]], [[Status Uniti Americae]], [[Civitates Unitae Americae]]
@@ -76,6 +76,7 @@
 *Uyghur: {{FAchar|[[ﺋﺎﻣﯧﺮﯨﻜﺎ ﻗﻮﺷﻤﺎ ﺷﺘﺎﺗﻠﯩﺮﻯ]]}} (’amerika quşma ştatleri)
 *Uzbek: [[Amerika Qo'shma Shtatlari]]
 *Vietnamese: [[Hoa Kỳ]], [[Nước Mỹ]], [[Mỹ Quốc]] (''short forms''); [[Hợp Chủng Quốc Hoa Kỳ]] (''long form''); [[HK#Vietnamese|HK]] (''abbr.''), [[Mỹ]] (''abbr.'')
+*Võro: [[Ameeriga Ütisriigiq]]
 *Yiddish: ''short form'': [[פֿאַראייניקטע שטאַטן]] (Fareynikte Shtatn)
 {{bottom}}
 
