--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -205,6 +205,7 @@ Old English ''[[brycġian]]''
 [[el:bridge]]
 [[fa:bridge]]
 [[fr:bridge]]
+[[ko:bridge]]
 [[hy:bridge]]
 [[io:bridge]]
 [[it:bridge]]
