--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -12,6 +12,8 @@
 # {{UK}} a person of [[fair]] skin and fair hair (usually spelled "''blonde''" when referring to a woman).
 # {{UK}} a [[pale]] [[golden]] [[brown]] [[colour]].
 
+{{rfphoto| must illustrate the image of a blonde person}}
+
 ===Usage notes===
 : In the English language, it is only one of a few distinct words where the gender differentiation is actually reflected in the spelling of the word (i.e. ''She is a blonde woman.'' vs. ''He is a blond man.''), even though this is a relatively common occurrence in other languages. "Blond(e)" has only recently been borrowed from French into English to refer to light hair; [[traditional]] terms for light hair in English are "''fair(-haired)''", "''[[flaxen]]''", and "''[[towhead|tow headed]]''".
 
