--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -134,11 +134,13 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 [[kk:find]]
 [[ku:find]]
 [[hu:find]]
+[[ja:find]]
 [[pl:find]]
 [[pt:find]]
 [[ru:find]]
 [[simple:find]]
 [[fi:find]]
+[[ta:find]]
 [[vi:find]]
 [[tr:find]]
 [[uk:find]]
