--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -20,6 +20,7 @@ Old English ''[[findan]]'', from Germanic ''*finþanan''.  Cognate with Dutch ''
 
 # {{transitive}} To [[encounter]], to [[discover]].
 #: ''Project Gutenberg finds that Find is the 190th most important word in the English language.
+#: ''I found my car keys -- they were under the couch.''
 # {{transitive}} To [[point out]].
 #:''He kept finding faults with my work.''
 # {{transitive}} To decide that, to form the [[opinion]] that.
