--- a/en/f/flaxen.6882.wikitext
+++ b/en/f/flaxen.6882.wikitext
@@ -16,6 +16,7 @@
 *[[Dutch]]: [[vlaskleurig]]
 {{mid}}
 *Japanese: [[亜麻]][[製]]の (あませいの, amasei no)
+*Portuguese: [[Cor de linho]] {{f}}
 *Russian: [[льняной]] (l'n'anój)
 {{bottom}}
 
