--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -26,6 +26,7 @@
 *Frisian: [[skyldpod]]
 *German: [[Schildkröte]] {{f}}
 *Hungarian: [[teknősbéka]], [[teknős]]
+*Hindi: [[Kachua]]
 *Indonesian: [[kura-kura]]
 *Italian: [[tartaruga]] {{f}}
 *Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
