--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -14,13 +14,13 @@
 {{top}}
 *Albanian: [[breshkë]] [[:sq:breshkë|º]] {{f}}
 *Bosnian: [[kornjača]] {{f}}
-*[[Breton]]: [[baot]] {{f}}, -ed {{p}}, [[baot]] douar (to specify)
+*[[Breton]]: [[baot]] {{f}}, baoted {{p}}, [[baot]] douar
 *[[Catalan]]: [[tortuga]] {{f}}
-*Chinese: [[草龟]] (caogui, cao3gui1)
+*Chinese: [[草龟]] (cǎoguī)
 *Croatian: [[kornjača]] {{f}}
 *Czech: [[želva]]
 *Dutch: [[schildpad]] {{f}}
-*[[Esperanto]]: [[testudo]]
+*Esperanto: [[testudo]]
 *Finnish: [[kilpikonna]]
 *French: [[tortue]] {{f}}
 *Frisian: [[skyldpod]]
@@ -29,14 +29,14 @@
 *Indonesian: [[kura-kura]]
 *Italian: [[tartaruga]] {{f}}
 *Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
-*Korean: [[거북]] (geobug), [[거북이]] (geobugi)
+*Korean: [[거북]] (geobuk), [[거북이]] (geobugi)
 {{mid}}
 *Lithuanian: [[vėžlys]] {{m}}
 *Norwegian: [[skilpadde]]
 *Polish: [[żółw lądowy]] {{m}}
 *Portuguese: [[tartaruga]] {{f}}
 *Romanian: [[ţestoasă]] {{f}}, [[broască ţestoasă]] {{f}}
-*Russian: [[черепаха]]
+*Russian: [[черепаха]] (čerepáxa) {{f}}
 *Serbian:
 *:Cyrillic: [[корњача]] {{f}}
 *:Roman: [[kornjača#Serbian|kornjača]] {{f}}
