--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -13,7 +13,7 @@ Old English ''[[crēopan]]''
 # The movement of something that creeps.
 # A gradual change in anything.
 # {{cattag|publishing}} In sewn books, the tendancy of [[page]]s on the inside of a [[quire]] to stand out farther than those on the outside of it.
-# {{cattag|materials science}} An increase in [[strain]] with time.
+# {{cattag|materials science}} An increase in [[strain]] with time; the gradual [[flow]] or [[deformation]] of a material under [[stress]].
 # {{geology}} the [[imperceptible]] [[downslope]] movement of surface [[rock]]
 # {{cattag|informal|pejorative}} An annoyingly [[unpleasant]] person.
 #: ''Stop following me, you '''creep'''!''
