--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -21,6 +21,7 @@
 #The act of buying large supplies of something which is belived to become more expensive or more difficult to get at in the near future.
 
 [[io:hamstring]]
+[[pl:hamstring]]
 [[ru:hamstring]]
 [[vi:hamstring]]
 [[zh:hamstring]]
