--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -37,9 +37,10 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Frisian: [[moai]], [[kreas]]
 *German: [[schön]]
 *Greek: [[ωραίος]] {{m}} (oréyos), [[όμορφος]] {{m}} (ómorphos)
+*Hebrew: יפה (yafe) ''m'', יפה (yafa) ''f''
 *Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
-{{mid}}
 *Icelandic: [[fallegur]], [[fagur]]
+{{mid}}
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
 *Italian: [[bello]]
 *Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
@@ -63,6 +64,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 
 '''pleasant, clear weather'''
 {{top}}
+*Hebrew: נאה (na'e)
 {{mid}}
 *[[Tamil]]: [[அழகிய]] [azhagiya]
 *[[Telugu]]: [[ఆహ్లాదకరమైన]]
