--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -48,6 +48,7 @@ From {{OF.}} ''[[founder]]'', from {{L.}} ''[[fundare]]''.
 =====Translations=====
 {{top}}
 *Czech: [[založit]] (1,2)
+*Dutch: {{t|nl|stichten}}
 *[[Esperanto]]: [[fondi]]
 *French: [[fonder]] (1,2)
 {{mid}}
