--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -1,4 +1,5 @@
 ==Translingual==
+{{stroke order|type=animate}}
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=4411<sub>2</sub>|canj=土心木 (GPD)}}
 # [[earth]]
@@ -7,6 +8,7 @@
 ====References====
 {{Han ref|kx=0224.060|dkj=04890|dj=0456.080|hdz=10420.120|uh=5730|ud=22320|bh=A661|bd=42593}}
 ----
+
 ==Cantonese==
 ===Hanzi===
 {{yue-hanzi|jyut=|y=dei6}}
