/* Indefinite pronoun */ <het#2088827>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -33,7 +33,7 @@
 '''het'''
 
 # [[it]]
-#: ''Het regent weeral.'' &mdash; It's raining again.
+#: ''Het regent alweer.'' &mdash; It's raining again.
 #: ''Hoe gaat het?'' &mdash; How are you?
 #: ''Wat geeft het?'' &mdash; What does it matter?
 #: ''Hoe laat is het?'' &mdash; What time is it?
