--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -37,7 +37,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 *Frisian: [[moai]], [[kreas]]
 *German: [[schön]]
 *Greek: [[ωραίος]] {{m}} (oréyos), [[όμορφος]] {{m}} (ómorphos)
-*Hebrew: יפה (yafe) ''m'', יפה (yafa) ''f''
+*Hebrew: [[יפה]] (yafe) ''m'', [[יפה]] (yafa) ''f''
 *Hindi: [[ख़ूबसूरत]] (<u>kh</u>ūbsūrat), [[सुन्दर]] (sundar)
 *Icelandic: [[fallegur]], [[fagur]]
 {{mid}}
@@ -65,7 +65,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 
 '''pleasant, clear weather'''
 {{top}}
-*Hebrew: נאה (na'e)
+*Hebrew: [[נאה]] (na'e)
 {{mid}}
 *[[Tamil]]: [[அழகிய]] [azhagiya]
 *[[Telugu]]: [[ఆహ్లాదకరమైన]]
