/* Translations */ nl, fr <beautiful#2102937>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -65,6 +65,8 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 
 '''pleasant, clear weather'''
 {{top}}
+*Dutch: [[mooi]]
+*French: [[beau]] {{m}}
 *Hebrew: [[נאה]] (na'e)
 {{mid}}
 *[[Tamil]]: [[அழகிய]] [azhagiya]
