--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -12,7 +12,7 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 ===Adjective===
 {{en-adj}}
 
-#possessing great charm and very attractive
+#possessing charm and attractive
 #{{cattag|of the weather}} pleasant; clear.
 
 ====Translations====
@@ -76,14 +76,15 @@ From French ''[[beaut&eacute;]]'', '''beauty''', + Germanic ''[[-ful]]'', '''ful
 ====Synonyms====
 *[[attractive]]
 *[[cute]]
+*[[fair]]
 *[[good looking]]
 *[[gorgeous]]
 *[[handsome]]
+*[[hot]]
 *[[lovely]]
 *[[nice looking]]
 *[[pretty]]
 *[[shapely]]
-*[[hot]]
 
 ====Antonyms====
 *[[misshapen]]
