--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -23,10 +23,11 @@
 *Esperanto: [[testudo]]
 *Finnish: [[kilpikonna]]
 *French: [[tortue]] {{f}}
-*Frisian: [[skyldpod]]
+*[[Frisian]]: [[skyldpod]]
 *German: [[Schildkröte]] {{f}}
 *Hungarian: [[teknősbéka]], [[teknős]]
 *Indonesian: [[kura-kura]]
+*Isthmus Zapotec: [[bigu]]
 *Italian: [[tartaruga]] {{f}}
 *Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
 *Korean: [[거북]] (geobuk), [[거북이]] (geobugi)
@@ -44,8 +45,8 @@
 *Somali: [[diin]]
 *Spanish: [[tortuga]] {{f}}
 *Swedish: [[sköldpadda]] [[:sv:sköldpadda|º]]
-*Telugu: [[తాబేలు]] (taabealu)
-*Uyghur:
+*[[Telugu]]: [[తాబేలు]] (taabealu)
+*[[Uyghur]]:
 *:Cyrillic: [[ташпақа]]
 *:Persic: {{FAchar|[[تاشپاقا]]}}
 *:Roman: [[taşpak̡a|taşpaqa]]
