--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -25,6 +25,7 @@
 *Czech: [[hrom]] {{m}}, [[zahřmění]] {{n}}
 *Finnish: [[ukkonen]]
 {{trans-mid}}
+*Russian: [[гром]] (grom) {{m}}
 *Swedish: [[åska]] {{c}}, (åsk)[[smäll]] {{c}}
 {{trans-bottom}}
 
@@ -32,6 +33,7 @@
 *Czech: [[zahřmění]] {{n}}, [[hromová rána]] {{f}}, [[hřmění]] {{n}}
 *Finnish: [[jyrinä]]
 {{trans-mid}}
+*Russian: [[гром]] (grom) {{m}}, [[грохот]] (gróχot) {{m}}
 *Swedish: [[åskmuller]] {{n}}, [[muller]] {{n}}, [[åskdån]] {{n}}, [[dån]] {{n}}
 {{trans-bottom}}
 
@@ -39,6 +41,7 @@
 *Czech: [[hřmění]] {{n}}, [[dunění]] {{n}}
 *Finnish: [[jyrinä]], [[jylinä]], [[pauhu]]
 {{trans-mid}}
+*Russian: [[рокот]] (rókot) {{m}}
 *Swedish: [[mullrande]] {{n}}, [[dån]] {{n}}
 {{trans-bottom}}
 
@@ -65,7 +68,6 @@
 *{{ttbc|Norwegian}}: [[torden]]
 *{{ttbc|Polish}}: [[grzmot]] {{m}}
 *{{ttbc|Portuguese}}: [[trovão]] {{m}}
-*{{ttbc|Russian}}: [[гром]] (grom) {{m}}, [[грохот]] (gróχot) {{m}}
 *{{ttbc|Slovene}}: [[grom]] {{m}}
 *{{ttbc|Spanish}}: [[trueno]] {{m}}, [[rugiente]] {{m}}
 *{{ttbc|Telugu}}: [[ఉరుము]] (urumu)
@@ -88,6 +90,7 @@
 {{trans-mid}}
 *Finnish: [[ukkostaa]], [[jyristä]], [[pauhata]]
 *French: [[tonner]]
+*Russian: [[греметь]] (gr'em'ét') {{impf}}, [[грохотать]] (groχotát') {{impf}}
 *Swedish: [[dundra]], [[dåna]]
 {{trans-bottom}}
 
