--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -92,6 +92,7 @@
 {{trans-mid}}
 *Finnish: [[ukkostaa]], [[jyristä]], [[pauhata]]
 *French: [[tonner]]
+*Polish: [[grzmieć]], [[zagrzmieć]]
 *Russian: [[греметь]] (gr'em'ét') {{impf}}, [[грохотать]] (groχotát') {{impf}}
 *Swedish: [[dundra]], [[dåna]]
 {{trans-bottom}}
@@ -103,6 +104,7 @@
 {{trans-mid}}
 *Finnish: [[jyristä]]
 *French: [[déblatérer]]
+*Polish: [[gromić]]
 {{trans-bottom}}
 
 =====Translations to be categorized=====
@@ -119,7 +121,6 @@
 {{mid}}
 *{{ttbc|Latin}}: [[tonare]]
 *{{ttbc|Norwegian}}: [[tordne]]
-*{{ttbc|Polish}}: [[zagrzmieć]] ''[[pf.]]'', [[grzmieć]] ''[[impf.]]''
 *{{ttbc|Portuguese}}: [[troar]], [[trovejar]]
 *{{ttbc|Slovene}}: [[grmeti]]
 *{{ttbc|Tupinambá}}: [[sunung]]
