--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -118,7 +118,7 @@
 '''pen'''
 # A transliteration of any of a number of Chinese characters properly represented as having one of four tones, [[pēn]], [[pén]], [[pěn]], or [[pèn]].
 
-===Usage note===
+====Usage note====
 English transcriptions of Chinese speech often fail to distinguish between the subtle tonal differences employed in the Chinese language, using words such as this one without the appropriate indication of tone.
 
 [[Category:Mandarin pinyin]]
