--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -8,7 +8,7 @@
 *{{audio|en-us-straight.ogg|Audio (US)}}
 *Rhymes: [[Rhymes:English:-eɪt|-eɪt]]
 
-===Homophones===
+====Homophones====
 * [[strait]]
 
 ===Adjective===
