--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -86,6 +86,7 @@ From Old English [[ceosan|ċēosan]].
 [[Category:English irregular verbs]]
 
 [[de:choose]]
+[[el:choose]]
 [[fr:choose]]
 [[gl:choose]]
 [[ko:choose]]
