--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -146,6 +146,7 @@ From Proto-North Sarawak *''likud'', from Proto-Malayo-Polynesian *''likuj''.
 [[Category:kyi:Anatomy]]
 
 [[ar:cut]]
+[[el:cut]]
 [[es:cut]]
 [[fr:cut]]
 [[gl:cut]]
