robot  Adding: [[el:fight]] <fight#2121817>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -203,6 +203,7 @@ Old English ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]'
 [[Category:1000 English basic words]]
 
 [[ar:fight]]
+[[el:fight]]
 [[es:fight]]
 [[fr:fight]]
 [[gl:fight]]
