--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -20,6 +20,7 @@
 ====Translations====
 '''fair skinned/haired person'''
 {{top}}
+*Hebrew: [[בלונדיני]] (blondyni) ''m'', [[בלונדינית]] (blondynit) ''f''
 *[[Irish]]: [[fionn]] (of both males and females), [[fear#Irish|fear]] fionn {{m}}, [[bean#Irish|bean]] fhionn {{f}}
 * [[Ido]]: [[blonda]]
 {{mid}}
