/* Usage note */ <et cetera#2127601>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -62,7 +62,7 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 # and the rest, and the others, and so on
 
 ===Usage note===
-Often abbreviated "etc." or "&c". [[Ampersand]] ("[[&]]") comes from the Latin word '''[[et]]''', meaning ''and''.
+Often abbreviated ''etc.'' or ''&c''. [[Ampersand]] ([[&]]) comes from the Latin word '''[[et]]''', meaning ''and''.
 
 ===Related terms===
 *[[&]]
