/* Translations to be checked */ <fight#2136063>

--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -199,6 +199,7 @@ Old English ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]'
 {{checktrans}}
 *{{ttbc|Spanish}}: [[lucha]] {{f}}, [[riña]]
 *{{ttbc|Telugu}}: [[కొట్లాట]] (koTlaaTa), [[పోరాటం]] (pOraaTaM)
+*{{ttbc|Persian}}: [[Jangidan]] {{v}}, [[جنگیدن، حمله کردن]]
 
 [[Category:1000 English basic words]]
 
