--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -1,22 +1,21 @@
 [[Image:Brick wall old.jpg|A brick wall|thumb]]
 ==English==
-
+{{wikipedia}}
 ===Pronunciation===
-*brĭk, /brɪk/, /<tt>brIk</tt>/
+*{{AHD|/brĭk/}}, {{IPA|/brɪk/}}, {{SAMPA|/brIk/}}
 *{{audio|en-us-brick.ogg|Audio (US)}}
 *:[[Rhymes:English:-ɪk|Rhymes: -ɪk]]
 
 ===Noun===
-{{WP}}
-'''brick''' ([[bricks]])
+{{en-noun}}
 
-# A hardened block of [[mud]], [[clay]], etc, used for building
+# A hardened block of [[mud]], [[clay]], etc, used for building.
 #:''This house is made of '''bricks'''''.
-#Bricks as a building material
+# Considered collectively, as a building material.
 #:''This house is made of '''brick'''''.
 # {{basketball}} A shot which misses, particularly one which bounces directly out of the basket.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
-#Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
+# Term of endearment, especially towards a subject who has performed a favour of an act of kindness without expectation of reciprocity.
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 
 ====Translations====
@@ -74,6 +73,21 @@
 * [[brickfielder]]
 
 [[Category:1000 English basic words]]
+
+----
+
+==French==
+===Etymology===
+From English ''[[brig]]''.
+
+===Pronunciation===
+{{IPA|/bʀik/}}
+
+===Noun===
+{{fr-noun-reg|m}}
+
+# {{nautical}} [[brig]]
+# ≈ [[fritter]] (but with a filling)
 
 [[ar:brick]]
 [[de:brick]]
