--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -155,6 +155,7 @@ English transcriptions of Chinese speech often fail to distinguish between the s
 [[pl:pen]]
 [[pt:pen]]
 [[ru:pen]]
+[[simple:pen]]
 [[fi:pen]]
 [[ta:pen]]
 [[vi:pen]]
