/* Derived terms */ <play#2151430>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -303,6 +303,7 @@ Old English ''[[pleġian]]''
 *[[play up]]
 *[[playwright]]
 *[[radio play]]
+*[[roleplay]]
 *[[screen play]]
 *[[two can play that game]]
 *[[war play]]
