--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -42,6 +42,7 @@ From {{OE.}} ''[[feohtan]]'' {{proto|West-Germanic|fextanan}}. Cognate with Dutc
 *Italian: [[azzuffarsi]], [[battersi]]
 *Latin: [[pugnare]]
 *Polish: [[walczyć]]
+*Scots Gaelic: [[cog]], [[sabaid]]
 *Swedish: [[slåss]], [[kämpa]]
 {{trans-bottom}}
 
@@ -59,6 +60,7 @@ From {{OE.}} ''[[feohtan]]'' {{proto|West-Germanic|fextanan}}. Cognate with Dutc
 *Hebrew: {{he-translation|להילחם|lehilakhém}}
 {{trans-mid}}
 *Icelandic: [[heyja]]
+*Scots Gaelic: [[cog]], [[sabaid]]
 {{trans-bottom}}
 
 {{trans-top|to engage in combat}}
@@ -69,6 +71,7 @@ From {{OE.}} ''[[feohtan]]'' {{proto|West-Germanic|fextanan}}. Cognate with Dutc
 {{trans-mid}}
 *Icelandic: [[berjast]] [[við]]
 *Italian: [[combattere]]
+*Scots Gaelic: [[cog]], [[sabaid]]
 {{trans-bottom}}
 
 {{trans-top|to counteract}}
