--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -141,6 +141,7 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 *Latin: [[pugna]]
 *Hungarian: [[küzdelem]]
 *Romanian: [[luptă]] {{f}}
+*Scots Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}
 *Spanish: [[lucha]] {{f}}
 {{trans-bottom}}
 
@@ -155,6 +156,7 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 *Icelandic: [[bardagi]] {{m}}
 *Italian: [[battaglia]] {{f}}, [[combattimento]] {{m}}
 *Latin: [[pugna]]
+*Scots Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}, [[blàr]] {{m}}
 *Swedish: [[strid]], [[kamp]]
 {{trans-bottom}}
 
@@ -167,6 +169,7 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 *German: [[Keilerei]] {{f}}
 *Italian: [[rissa]] {{f}}
 *Latin: [[pugna]]
+*Scots Gaelic: [[cogadh]] {{m}}, [[sabaid]] {{f}}
 {{trans-bottom}}
 
 {{trans-top|martial arts match}}
