--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -24,9 +24,9 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 
 ===Noun===
 
-#: Katie K
+#:Katie K
 
-Example: #:’’ Katie K is the most beautiful girl I have ever met.’’
+Example: "Katie K is the most beautiful girl I have ever met."
 
 ====Synonyms====
 *(''possessing charm and attractive''): [[attractive]], [[cute]], [[fair]], [[good-looking]], [[gorgeous]], [[handsome]], [[hot]] (''slang''), [[lovely]], [[nice-looking]], [[pretty]], [[shapely]]
