--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -21,6 +21,7 @@ Abbreviation of Latin ''[[exempli gratiā]]'' ("for example"). ''Gratiā'' here 
 ====Translations====
 {{top}}
 *Bosnian: [[npr.#Bosnian|npr.]] (''[[na]] [[primjer]]'')
+*Danish: [[f.eks.]], [[fx]] (''[[for eksempel]]'')
 *Dutch: [[bv.]], [[bijv.]], [[bvb.]] (''[[bijvoorbeeld]]'')
 *Finnish: [[esim.]] (''[[esimerkiksi]]'')
 *French: [[par ex.]], [[p. ex.]] (''[[par exemple]]'')<!-- are both right? -->
@@ -30,6 +31,7 @@ Abbreviation of Latin ''[[exempli gratiā]]'' ("for example"). ''Gratiā'' here 
 *Italian: [[ad es.]] (''[[ad esempio]]'')
 *Japanese: [[例]] (rei)
 {{mid}}
+*Norway: [[for eksempel]] ([[f.eks.]])
 *Portuguese: [[por exemplo]]
 *Polish: [[np.]] (''[[na]] [[przykład]]'')
 *Russian: [[напр.]]
@@ -38,7 +40,7 @@ Abbreviation of Latin ''[[exempli gratiā]]'' ("for example"). ''Gratiā'' here 
 *:Roman: [[npr.]] (''[[na]] [[primer]]'')
 *Spanish: [[por ejemplo]]
 *Swedish: [[t.ex.]], [[t ex]], [[tex.]] [[t. ex.]] (''[[till exempel]]''), [[exempelvis]]
-*Danish: [[f.eks.]], [[fx]] (''[[for eksempel]]'')
+
 *Vietnamese: [[vd.]] ([[ví dụ]])
 {{bottom}}
 
