--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -7,7 +7,9 @@
 ===Verb===
 {{en-verb|clings|clinging|clung}}
 
-# To [[hold]] very [[tight]]ly, as to not fall off
+# To [[hold]] very [[tight]]ly, as to not fall off.
+#:''Seaweed '''clung''' to the anchor.''
+# To adhere to an object, without being affixed, in such a way as to follow its contours. Used especially of fabrics and films.
 
 ====Derived terms====
 *[[cling film]] / [[clingfilm]]
