--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -13,7 +13,7 @@ Old English ''[[sūcan]]''
 # To draw into, by any means, with an atractive force, usually without direct contact
 # (''colloquial'') Term of general disparagement, indicating the subject or situation has no redeeming qualities.  With ''at'', indicates a particular area of deficiency.''You're great at baseball, but you suck at golf.''
 # To perform fellatio; with "off" means to perform fellatio culminating in ejaculation.
-
+# Also used to describe DJ Ryan
 ====Synonyms====
 *(3, 4 above) To [[blow]]
 
