--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -18,6 +18,7 @@ See [[WikiSaurus:vomit]]
 * Armenian: [[հետ տալ]], [[փսխել]]
 * Czech: [[zvrátit]]
 *Dutch: [[overgeven]], [[braken]], ''(colloquial)'' [[kotsen]]
+*Esperanto: [[vomi]]
 *Estonian: [[oksendama]]
 *Finnish: [[oksentaa]]
 *French: [[vomir]]
