--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -33,6 +33,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 *Hungarian: [[hús]]
 *Ido: [[karno]]
 *Russian: мягкая [[ткань]] ''f'', [[плоть]] ''f (poetic)'', [[мясо]] ''n coll.''
+*Scots Gaelic: [[feòil]] {{f}}
 *Telugu: [[మాంసం]] (maamsam)
 {{bottom}}
 
@@ -47,6 +48,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 {{mid}}
 *Hungarian: [[hús]]
 *Russian: [[мясо]] ''n'', [[плоть]] ''f''
+*Scots Gaelic: [[feòil]] {{f}}
 {{bottom}}
 
 '''human body enity'''
@@ -57,6 +59,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 *Greek: [[σάρκα]] [ˈsarka] ''f''
 {{mid}}
 *Ido: [[korpo]]
+*Scots Gaelic: [[feòil]] {{f}}, [[craiceann]] {{m}}
 {{bottom}}
 
 '''skin'''
@@ -64,6 +67,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 *Danish: [[hud]]
 *Dutch: [[vel]] ''n''
 {{mid}}
+*Scots Gaelic: [[craiceann]] {{m}}
 {{bottom}}
 
 '''edible part of fruit/vegetable'''
@@ -77,6 +81,7 @@ Old English ''{{Latinx|flǣsc}}'', ''[[flæsc]]''; cf. [[Old_High_German|Old Hig
 {{mid}}
 *Ido: [[pulpo]]
 *Russian: [[мякоть]] ''f''
+*Scots Gaelic: [[feòil]] {{f}}
 *Telugu: [[గుజ్జు]] (gujju)
 {{bottom}}
 
