--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -19,7 +19,7 @@ Old English ''[[sūcan]]''
 
 ====Antonyms====
 *(1, 2 above) To [[blow]]
-*(3, 4 above) To [[rock]], to [[rule]]
+*(3 above) To [[rock]], to [[rule]]
 
 ====Translations====
 {{trans-top|To use the mouth to pull in liquid substances for ingestion or to perform a similar act on solid material without ingestion}}
