--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -75,6 +75,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Romanian: [[veni]]
 *Romansch: [[vegnir]]
 *Russian: [[приходить]] / [[прийти]] (prikhodít’, prijtí)
+*Scots Gaelic: [[thig]]
 *Slovene: [[priti]]
 *Spanish: [[venir]]
 *Swedish: [[komma]]
