/* Translations */ ttbc <cut#2180397>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -100,13 +100,13 @@
 
 ====Translations====
 {{rfc-trans}}
-{{top}}
-*Albanian: [[pret]]
-*Bulgarian: [[сека]]
-*Catalan: [[tallar]]
-*Croatian: [[rezati]]
-*Dutch: [[snijden]], [[afsnijden]], [[knippen]]
-*Danish:
+{{trans-top|Translations to be checked}}
+*{{ttbc|Albanian}}: [[pret]]
+*{{ttbc|Bulgarian}}: [[сека]]
+*{{ttbc|Catalan}}: [[tallar]]
+*{{ttbc|Croatian}}: [[rezati]]
+*{{ttbc|Dutch}}: [[snijden]], [[afsnijden]], [[knippen]]
+*{{ttbc|Danish}}:
 ** 1, 3, 9: [[skære]] (''knife, bat''), [[snitte]] (''knife, bat''), [[klippe]] (''scissors''), [[hugge]] (''axe, chisel''), [[save]] (''saw'').
 ** 2: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]] '''[[ud]]'''.
 ** 3: [[udvise]]/[[bortvise]] (from a team), [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]] '''[[af]]'''.
@@ -114,24 +114,24 @@
 ** 6: [[nedsætte]], [[sænke]] (''money'')
 ** 7: [[skære]]/[[snitte]]/[[klippe]]/[[hugge]]/[[save]]/[[file]] (''file''), [[Slibe]] (''by stone or sandpaper''), '''[[ud]]/[[til]]'''
 ** 8: [[skære]], [[krydse]] (''Geometry'')
-{{mid}}
-*Esperanto: [[tranĉi]]
-*Finnish: [[leikata]] (1), [[eristää]] (3), [[poistaa]] (3)
-*French: [[couper]]
-*German: [[schneiden]]
-*[[Guwal]]: [[nudin]], [[gunban]], [[banyin]]
-*Hungarian: [[vág]]
-*Indonesian: [[potong]], [[kerat]], [[iris]], [[memotong]]
-*Italian: [[tagliare]]
-*[[Jalnguy]]: [[jalnggan]], [[bubaman]]
-*Japanese: [[切る]] ([[きる]], kiru)
-*Portugues: cortar
-*Romanian: [[tăia]], [[croi]]
-*Serbian: [[iseći]] (1,2,3,7,8), [[rez]] (5), [[spustiti]] (6), [[sniziti]] (6), [[pobeći]] (10)
-*Spanish: [[cortar]]
-*Swedish: [[skära]] (1), [[klippa]] (1)
-*Telugu: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
-{{bottom}}
+*{{ttbc|Esperanto}}: [[tranĉi]]
+*{{ttbc|Finnish}}: [[leikata]] (1), [[eristää]] (3), [[poistaa]] (3)
+{{trans-mid}}
+*{{ttbc|French}}: [[couper]]
+*{{ttbc|German}}: [[schneiden]]
+*{{ttbc|Guwal}}: [[nudin]], [[gunban]], [[banyin]]
+*{{ttbc|Hungarian}}: [[vág]]
+*{{ttbc|Indonesian}}: [[potong]], [[kerat]], [[iris]], [[memotong]]
+*{{ttbc|Italian}}: [[tagliare]]
+*{{ttbc|Jalnguy}}: [[jalnggan]], [[bubaman]]
+*{{ttbc|Japanese}}: [[切る]] ([[きる]], kiru)
+*{{ttbc|Portuguese}}: cortar
+*{{ttbc|Romanian}}: [[tăia]], [[croi]]
+*{{ttbc|Serbian}}: [[iseći]] (1,2,3,7,8), [[rez]] (5), [[spustiti]] (6), [[sniziti]] (6), [[pobeći]] (10)
+*{{ttbc|Spanish}}: [[cortar]]
+*{{ttbc|Swedish}}: [[skära]] (1), [[klippa]] (1)
+*{{ttbc|Telugu}}: [[కోయు]] (kOyu) (1,2), [[తెంచు]] (teMchu)(3), [[కోత వేయు]] (kOta vEyu) (6), [[ఖండించుకొను]] (khaMDiMchukonu) (8)
+{{trans-bottom}}
 
 ----
 
