--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -151,6 +151,7 @@ English transcriptions of Chinese speech often fail to distinguish between the s
 [[hu:pen]]
 [[nl:pen]]
 [[ja:pen]]
+[[no:pen]]
 [[pl:pen]]
 [[pt:pen]]
 [[ru:pen]]
