--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -70,6 +70,7 @@ Old English ''[[crēopan]]''
 {{mid}}
 *Italian: [[strisciare]]
 *Japanese: [[這う]] (hau)
+*Portuguese: [[rastejar-se]]
 *Russian: [[ползти]]
 *Spanish: [[arrastrarse]], [[reptar]]
 {{bottom}}
