--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -13,7 +13,7 @@
 
 # The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]]
 # Something that [[divide]]s like the branch of a tree
-# A [[location]] of a [[business]] with several locations.
+# A [[location]] of an [[organization]] with several locations.
 #: ''Our main branch is downtown, and we have branches in all major suburbs.''
 # An area in business or of knowledge, research
 #{{nautical}} The [[certificate]] given by [[Trinity House]] to a [[pilot]] [[qualified]] to take [[navigational]] [[control]] of a [[ship]] in [[British]] [[water]]s
@@ -22,6 +22,7 @@
 {{trans-top|The woody part of a tree arising from the trunk and usually dividing}}
 *Bosnian: [[grana#Bosnian|grana]] {{f}}
 *Croatian: [[grana#Croatian|grana]] {{f}}
+* Czech: [[větev]]
 *Dutch: [[tak]]
 *Finnish: [[oksa]]
 *German: [[Ast]] {{m}}
@@ -33,7 +34,7 @@
 *Vietnamese: [[nhánh]]
 {{trans-bottom}}
 
-{{trans-top|Something that divides like the branch of a tree}}
+{{trans-top|something that divides like the branch of a tree}}
 *Bosnian: [[grana#Bosnian|grana]] {{f}}
 *Croatian: [[grana#Croatian|grana]] {{f}}
 *Dutch: [[tak]]
@@ -44,7 +45,7 @@
 *Turkish: [[dal]]
 {{trans-bottom}}
 
-{{trans-top|A location of a business with several locations}}
+{{trans-top|office of an organization with several locations}}
 *Dutch: [[filiaal]]
 *Finnish: [[ala]]
 *German: [[Zweigstelle]] {{f}}, [[Filiale]] {{f}}
@@ -58,7 +59,7 @@
 *Vietnamese: [[nhánh]]
 {{trans-bottom}}
 
-{{trans-top|An area in business or of knowledge, research}}
+{{trans-top|an area in business or of knowledge, research}}
 *Finnish: [[ala]]
 *German: [[Branche]] (of business)
 *Italian: [[branca]] {{f}}
@@ -68,7 +69,7 @@
 *Vietnamese: [[nhánh]]
 {{trans-bottom}}
 
-{{trans-top|The certificate given by Trinity House to a pilot qualified to take navigational control of a ship in British waters}}
+{{trans-top|certificate given by Trinity House to a pilot qualified to take navigational control of a ship in British waters}}
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -76,7 +77,6 @@
 {{checktrans}}
 {{top}}
 *{{ttbc|Bulgarian}}: [[клон]] (klon) {{m}}, [[клонка]] (klonka) {{f}}, [[отрасъл]] (otrasăl) {{m}} (of business)
-*{{ttbc|Czech}}: [[větev]]
 *{{ttbc|French}}: [[branche]] {{f}}
 *{{ttbc|German}}: [[Zweig]] {{m}} (1 <small>(small)</small>, 2, 4)
 *{{ttbc|Ido}}: brancho, [[fako]] (of a science)
@@ -109,18 +109,18 @@
 # {{computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
 
 ====Translations====
-{{trans-top|To arise from the trunk or a larger branch of a tree}}
+{{trans-top|to arise from the trunk or a larger branch of a tree}}
 *German: [[abzweigen]]
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|To produce branches}}
+{{trans-top|to produce branches}}
 *Finnish: [[haarautua]], [[haaraantua]]
 {{trans-mid}}
 *German: [[verzweigen]]
 {{trans-bottom}}
 
-{{trans-top|To jump to a different location in a program, especially as the result of a conditional statement}}
+{{trans-top|to jump to a different location in a program, especially as the result of a conditional statement}}
 *Finnish: [[haarautua]], [[haaraantua]]
 *French: [[brancher]]
 {{trans-mid}}
