--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -221,6 +221,7 @@ From {{OE.}} ''[[feoht]]'', from the verb.  Corresponding to Dutch ''[[gevecht]]
 [[it:fight]]
 [[kk:fight]]
 [[hu:fight]]
+[[ja:fight]]
 [[pl:fight]]
 [[ru:fight]]
 [[fi:fight]]
