--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -26,7 +26,7 @@
 {{mid}}
 *Russian: [[блондин]] (blondín) {{m}}, [[блондинка]] (blondínka) {{f}}
 *[[Scots Gaelic]]: [[bàn]], [[fionn]] (of both males and females), [[fear#Scots Gaelic|fear]] bàn {{m}}, [[bean#Scottish Gaelic|bean]] bhàn {{f}}
-*[[Spanish]]: [[rubio]] {{m}}, rubia {{f}}
+*[[Spanish]]: [[rubio]] {{m, f = rubia }}, catire {{m, f = catira}} (''Venezuela'')
 *Swedish: [[blondin]]
 *[[Welsh]]: [[penfelyn]]
 {{bottom}}
