--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -71,7 +71,7 @@
 *Spanish: [[Estados Unidos de América]] {{m}} {{s}}, (''short form'') Estados Unidos {{m}} {{s}}, ''abbr:'' [[EE. UU.]] {{m}} {{s}}, [[EEUU]]
 *Swedish: [[Amerikas förenade stater]], [[Förenta staterna]]
 *Tajik: [[Иёлоти Муттаҳидаи Амриқо]] (Iyoloti Muttaħidai Amriqo)
-*[[Thai]]: สหรัฐอเมริกา (sa ha raat america)
+*Thai: {{THchar|[[สหรัฐอเมริกา]]}} (sà hà rát àmayrígaa)
 *Turkish: [[Amerika Birleşik Devletleri]], [[ABD]]
 *Ukrainian: [[Сполучені Штати Америки]] (Spolučeni Štáti Amériki) {{mpl}}, [[США#Ukrainian|США]]
 *Uyghur: {{FAchar|[[ﺋﺎﻣﯧﺮﯨﻜﺎ ﻗﻮﺷﻤﺎ ﺷﺘﺎﺗﻠﯩﺮﻯ]]}} (’amerika quşma ştatleri)
