--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -48,7 +48,7 @@
 *Greek: [[Γαλλία]] (ɣallía) {{f}}
 *[[Gujarati]]: [[ફ્રાઁસ]]
 *[[Haitian Creole]]: [[Frans]]
-*Hebrew: [[צרפת|צָרְפַת]] {{IPAchar|(Tzorfat; ''classical'' Ṣārəphath)}}
+*Hebrew: [[צרפת|צָרְפַת]] {{IPAchar|(Tzorfat; ''classical:'' Ṣārəphath)}}
 *Hindi: [[फ़्राँस]]
 *Hungarian: [[Franciaország]]
 *Icelandic: [[Frakkland]]
@@ -101,7 +101,7 @@
 *Swedish: [[Frankrike]]
 *Tagalog: [[Pransya]]
 *[[Tamil]]: [[பிரான்ஸ்]] (pirāns)
-*Thai: [[ฝรั่งเศส]] (fàràngsèt)
+*Thai: {{THchar|[[ฝรั่งเศส]]}} (fàràngsèt)
 *[[Tok Pisin]]: [[Pranis]]
 *Turkish: [[Fransa]]
 *Ukrainian: [[Франція]] (Frántsija) {{f}}
