--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|floʊt}}
+*{{IPA|/floʊt/}}
 *{{audio|en-us-float.ogg|Audio (US)}}
 *:Rhymes: [[Rhymes:English:-əʊt|-əʊt]]
 
