--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -7,7 +7,7 @@
 *:Rhymes: [[Rhymes:English:-əʊt|-əʊt]]
 
 ===Etymology===
-From {{OE.}} [[flotian]].
+From {{ON.}} [[fljóta]].
 
 ===Noun===
 {{en-noun}}
