robot  Adding: [[ang:play]], [[io:play]] <play#2199121>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -314,11 +314,13 @@ Old English ''[[pleġian]]''
 [[Category:English ergative verbs]]
 [[Category:1000 English basic words]]
 
+[[ang:play]]
 [[ar:play]]
 [[el:play]]
 [[es:play]]
 [[fa:play]]
 [[fr:play]]
+[[io:play]]
 [[it:play]]
 [[kk:play]]
 [[hu:play]]
