/* Translations */ Polish <come#2208385>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -70,6 +70,7 @@ This spelling (for this meaning) is extremely rare, in comparison to the homopho
 *Old English: [[cuman]]
 *Pashto: {{FAchar|[[راتلل]]}}
 *Persian: {{FAchar|[[امدن|آمَدَن]]}} (āmædæn)
+*Polish: [[przychodzić]]
 *Portuguese: [[vir]]
 *[[Rohingya]]: [[ai]]
 *Romanian: [[veni]]
