robot  Adding: [[el:fought]] <fought#2211686>

--- a/en/f/fought.6880.wikitext
+++ b/en/f/fought.6880.wikitext
@@ -30,6 +30,7 @@
 *[[Indonesian]]: [[tarung]], [[tengkar]], [[serang]]
 *[[Japanese]]: [[戦った]] / [[闘った]] ([[たたかった]], tatakatta), [[対決]] ([[たいけつ]]した, taiketsu-shita), [[喧嘩]]した ([[けんか]]した, kenka-shita)
 
+[[el:fought]]
 [[fr:fought]]
 [[it:fought]]
 [[hu:fought]]
