English - Aanagrams <het#2217741>

--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -47,6 +47,21 @@
 
 ----
 
+==English==
+
+===Etymology===
+By abbreviation.
+
+===Noun===
+'''het'''
+
+# slang for [[heterosexual]]
+
+===Anagrams===
+*[[the]] (''See:'' [[het#Dutch|het]])
+
+----
+
 ==Swedish==
 
 ===Adjective===
@@ -90,18 +105,6 @@ From English ''[[head]]''.
 '''het'''
 
 # [[head]]
-
-----
-
-==English==
-
-===Etymology===
-By abbreviation.
-
-===Noun===
-'''het'''
-
-# slang for [[heterosexual]]
 
 [[Category:Dutch articles]]
 [[Category:Dutch personal pronouns]]
