--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -8,7 +8,12 @@
 
 ===Noun===
 {{en-noun}}
-# A piece of [[cloth]] with which one usually [[cover]]s a [[window]] to keep the [[sun]] from shining inside.
+# A piece of [[cloth]] [[cover]]ing a [[window]] to keep the [[sun]] from shining inside.
+# A similar piece of cloth that seperates the [[audience]] and the [[stage]] in a [[theater]]. 
+
+===Verb===
+{{en-verb}}
+# To cover, as if with a curtain.  
 
 ====Related terms====
 *[[curtain call]]
