robot  Adding: [[ku:pen]] <pen#2221855>

--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -148,6 +148,7 @@ English transcriptions of Chinese speech often fail to distinguish between the s
 [[id:pen]]
 [[it:pen]]
 [[kk:pen]]
+[[ku:pen]]
 [[hu:pen]]
 [[nl:pen]]
 [[ja:pen]]
