robot  Adding: [[pl:pull]], [[tr:pull]] <pull#2222848>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -154,8 +154,10 @@ From {{E.}} [[pullover]].
 [[kk:pull]]
 [[hu:pull]]
 [[ja:pull]]
+[[pl:pull]]
 [[ru:pull]]
 [[fi:pull]]
 [[ta:pull]]
 [[vi:pull]]
+[[tr:pull]]
 [[zh:pull]]
