robot  Adding: [[it:stab]], [[tr:stab]] <stab#2226593>

--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -107,10 +107,12 @@
 [[es:stab]]
 [[fr:stab]]
 [[io:stab]]
+[[it:stab]]
 [[hu:stab]]
 [[pl:stab]]
 [[ru:stab]]
 [[fi:stab]]
 [[ta:stab]]
 [[vi:stab]]
+[[tr:stab]]
 [[zh:stab]]
