/* [[w:Limburgish language|Limburgish]] */ <lies#2227668>

--- a/en/l/lies.16986.wikitext
+++ b/en/l/lies.16986.wikitext
@@ -28,12 +28,12 @@
 
 ----
 
-==[[w:Limburgish language|Limburgish]]==
+==Limburgish==
 ===Noun===
 '''lies'''
 # [[list]]
 
-[[Category:Limburgish language]]
+[[Category:Limburgish nouns]]
 
 [[fr:lies]]
 [[it:lies]]
