--- a/en/春/春.16973.wikitext
+++ b/en/春/春.16973.wikitext
@@ -48,6 +48,7 @@
 *[[春繭]] (はるまゆ: harumayu)  ''the spring cocoon crop''
 *[[春休み]] (はるやすみ: haruyasumi)  ''spring break''
 *[[来春]] (らいしゅん: raishun)  ''next spring''
+*[[春分]] (しゅんぶん：shunbun) ''spring equinox''
 
 
 
