Reverted edits by [[Special:Contributions/147.226.159.219|147.226.159.219]] ([[User_talk:147.226.159.219|Talk]]); changed back to last version by [[User:UllmannBot|UllmannBot]] <beautiful#2234924>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -27,9 +27,14 @@ From {{F.}} ''[[beauté]]'', beauty, + Germanic ''[[-ful]]'', full of
 *(''well executed''): [[excellent]], [[exceptional]], [[good]], [[great]], [[marvellous]]/[[marvelous]], [[perfect]], [[stylish]], [[wonderful]]
 *(''ironic: how unfortunate''): [[great]], [[marvellous]]/[[marvelous]], [[nice]], very nice, [[wonderful]] (''any of these can be prefixed with an [[intensifier]] such as'' [[bloody]], [[damned]] ''or'' [[just]])
 
-doug steinke bald rock did mary-beth pine shes soooooooooooooo hotttttt shes a milf
+====Antonyms====
+*(''possessing charm and attractive''): [[grotesque]], [[hideous]], [[homely]], [[plain]], [[misshapen]], [[repulsive]], [[ugly]]
+*(''of the weather''): [[bad]], [[cloudy]], [[dull]], [[miserable]], [[overcast]], [[rainy]], [[wet]]
+*(''well executed''): [[average]], [[bad]], [[mediocre]], [[poor]], [[shoddy]], [[substandard]], [[terrible]], [[weak]]
 
-
+====Derived terms====
+*[[beautifully]]
+*[[beautifulness]]<!--?-->
 
 ====Related terms====
 *[[beauty]]
