+audio request <Germany#2243049>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -5,6 +5,7 @@
 *British {{SAMPA|/"dZ3:m@nI/}}
 *US {{IPA|[ˈdʒɝməni]}}
 *US {{SAMPA|/"dZ3`m@ni/}}
+{{rfap}}
 
 ===Proper noun===
 [[Category:English proper nouns]]
