added grade parameter   ([[Project:AWB|AWB]]) <坂#2243100>

--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -10,7 +10,7 @@
 ----
 ==Japanese==
 ===Kanji===
-{{ja-kanji|grade=|rs=土04}}
+{{ja-kanji|grade=3|rs=土04}}
 # {{defn|Japanese}} 
 ====Readings====
 {{ja-readings|on=[[はん]] (han)|kun=[[さか]] (saka)}}
